k add env without persist

--- a/appState.json
+++ b/appState.json
@@ -52,6 +52,14 @@
         "shouldPersist": false,
         "displayOnly": false,
         "editable": false
+      },
+      {
+        "lambdaId": "all",
+        "varKey": "Kumu",
+        "varValue": null,
+        "shouldPersist": false,
+        "displayOnly": false,
+        "editable": true
       }
     ],
     "packageJSON": {
@@ -65,7 +73,7 @@
     "projectRegion": "us-east-1",
     "platform": "AWS",
     "platformRegions": {},
-    "lastSave": 1566460718396
+    "lastSave": 1566461067444
   },
   "VCS_STATE": {
     "provider": "GitHub",
