added new env va. Hiru no per

--- a/appState.json
+++ b/appState.json
@@ -60,6 +60,14 @@
         "shouldPersist": false,
         "displayOnly": false,
         "editable": true
+      },
+      {
+        "lambdaId": "all",
+        "varKey": "hiru",
+        "varValue": null,
+        "shouldPersist": false,
+        "displayOnly": false,
+        "editable": true
       }
     ],
     "packageJSON": {
@@ -73,7 +81,7 @@
     "projectRegion": "us-east-1",
     "platform": "AWS",
     "platformRegions": {},
-    "lastSave": 1566461128749
+    "lastSave": 1566461275539
   },
   "VCS_STATE": {
     "provider": "GitHub",
